--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
                             2022 – Pursuing
                         </p>
                         <div class="social-links">
-                            <a href="https://linkedin.com/in/jaysolanki" aria-label="LinkedIn">
+                            <a href="https://linkedin.com/in/jay-solanki" aria-label="LinkedIn">
                                 <i class="fab fa-linkedin"></i>
                             </a>
                             <a href="https://github.com/jaysolanki15" aria-label="GitHub">
