--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
                 <h2 class="section-title">About Me</h2>
                 <div class="about-content">
                     <div class="about-image">
-                        <img src="https://via.placeholder.com/400" alt="Jay Solanki">
+                        <img src="https://github.com/Jaysolanki15/Portfolio/blob/main/My_photo_for_profile.jpg" alt="Jay Solanki">
                     </div>
                     <div class="about-text">
                         <p>
